objects/SLA__c.object
<CustomObject>
    <fields>
        <fullName>Completion_Time_hrs__c</fullName>
        <label>Completion Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Time_hrs__c</fullName>
        <label>Response Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>SLA&apos;s</relationshipLabel>
        <relationshipName>SLA_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SLA</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SLA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLA&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>